--- a/Droid/CustomRendererTest.Droid.csproj
+++ b/Droid/CustomRendererTest.Droid.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderers\ShadowButtonRenderer.cs" />
+    <Compile Include="Renderers\CustomSwitchRenderer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
